# gen_ai

./: .gitignore  README.md  base-finetuned.json  base-pretrained.json  base-single-epoch.json  download_data.py  execute.sh  execute_entities.sh  execute_experiments.sh  execute_experiments_instruct.sh  execute_remote.sh  extract.py  extract_image_caption.py  extract_images.py  filter.py  generate_configs.py  instruct-pretrained-prefix.json  instruct-pretrained.json  kill_all.sh  main.ipynb  main.py  pyproject.toml
configs/: novqa_lora16_lr1.0e-5_bs16.yaml  novqa_lora16_lr2.0e-5_bs64.yaml  novqa_lora16_lr5.0e-5_bs16.yaml  novqa_lora32_lr1.0e-5_bs32.yaml  novqa_lora32_lr2.0e-5_bs64.yaml  novqa_lora32_lr5.0e-5_bs64.yaml  novqa_lora64_lr2.0e-5_bs16.yaml  novqa_lora64_lr2.0e-5_bs64.yaml  novqa_lora64_lr5.0e-5_bs16.yaml  novqa_lora64_lr5.0e-5_bs64.yaml  replay_augmentation.yaml  vqa.yaml  withvqa_lora16_lr1.0e-5_bs16.yaml  withvqa_lora16_lr1.0e-5_bs32.yaml  withvqa_lora16_lr1.0e-5_bs64.yaml  withvqa_lora16_lr5.0e-5_bs32.yaml  withvqa_lora32_lr1.0e-5_bs16.yaml  withvqa_lora32_lr1.0e-5_bs32.yaml  withvqa_lora32_lr2.0e-5_bs16.yaml  withvqa_lora32_lr2.0e-5_bs32.yaml  withvqa_lora64_lr2.0e-5_bs32.yaml  withvqa_lora64_lr5.0e-5_bs64.yaml
eval_results/: eval_instruct_novqa_lora16_lr1.0e-5_bs128_full.json  eval_instruct_novqa_lora16_lr1.0e-5_bs256_full.json  eval_instruct_novqa_lora16_lr5.0e-6_bs128_full.json  eval_instruct_novqa_lora16_lr5.0e-6_bs256_full.json  eval_instruct_novqa_lora32_lr1.0e-5_bs128_full.json  eval_instruct_novqa_lora32_lr1.0e-5_bs256_full.json  (+70 more)
src/: baseline.py  (+7 more)
(+184 files in other folders)
