[project]
name = "multigen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.2",
    "ipykernel>=7.2.0",
    "nltk>=3.9.3",
    "pandas>=3.0.1",
    "pdfminer-six>=20260107",
    "peft>=0.18.1",
    "pillow>=12.1.1",
    "pymupdf>=1.27.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.3.0",
    "trl>=0.29.0",
    "wandb>=0.25.1",
]
